@@ -1,5 +1,10 @@
 2010-11-20  Jan Kratochvil  <jan.kratochvil@redhat.com>
 
+	* gdb.dwarf2/dw2-stack-boundary.exp: New file.
+	* gdb.dwarf2/dw2-stack-boundary.S: New file.
+
+2010-11-20  Jan Kratochvil  <jan.kratochvil@redhat.com>
+
 	* gdb.dwarf2/dw2-ada-ffffffff.S: New file.
 	* gdb.dwarf2/dw2-ada-ffffffff.exp: New file.
 
